--- a/src/main/resources/templates/common/footer.html
+++ b/src/main/resources/templates/common/footer.html
@@ -28,7 +28,9 @@
             </a>
           </li>
         </ul>
-        <p class="copyright text-muted">Copyright &copy; OnBoard by swrookie</p>
+        <p class="copyright text-muted">
+          Copyright &copy; OnBoard by swrookie 2021
+        </p>
       </div>
     </div>
   </div>
