--- a/src/main/resources/templates/common/sidebar.html
+++ b/src/main/resources/templates/common/sidebar.html
@@ -1,59 +1,161 @@
-<nav th:fragment="common-sidebar" id="sidebar">
-  <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark">
-    <a
-      href="/"
-      class="
-        d-flex
-        align-items-center
-        mb-3 mb-md-0
-        me-md-auto
-        text-white text-decoration-none
-      "
-    >
-      <span class="fs-5 fw-semibold">Boards</span>
-    </a>
-    <ul class="nav flex-column">
-      <li class="nav-item mb-1">
-        <button
+<div class="container-fluid bg-light">
+  <div class="row flex-nowrap">
+    <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0">
+      <div
+        class="
+          d-flex
+          flex-column
+          align-items-center align-items-sm-start
+          px-3
+          pt-2
+          text-white
+          min-vh-100
+        "
+      >
+        <ul
           class="
-            btn btn-toggle
-            align-items-center
-            text-white
-            rounded::before
-            collapsed
+            nav nav-pills
+            flex-column
+            mb-sm-auto mb-0
+            align-items-center align-items-sm-start
           "
-          data-bs-toggle="collapse"
-          data-bs-target="#dashboard-collapse"
-          aria-expanded="false"
+          id="menu"
         >
-          Category1
-        </button>
-        <div class="collapse" id="dashboard-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+          <li>
+            <a
+              href="#submenu1"
+              data-bs-toggle="collapse"
+              class="nav-link px-0 align-middle"
+            >
+              <i class="fs-4 bi-speedometer2"></i>
+              <span class="ms-1 d-none d-sm-inline">Dashboard</span>
+            </a>
+            <ul
+              class="collapse show nav flex-column ms-1"
+              id="submenu1"
+              data-bs-parent="#menu"
+            >
+              <li class="w-100">
+                <a href="#" class="nav-link px-0">
+                  <span class="d-none d-sm-inline">Item</span> 1
+                </a>
+              </li>
+              <li>
+                <a href="#" class="nav-link px-0">
+                  <span class="d-none d-sm-inline">Item</span> 2
+                </a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href="#" class="nav-link px-0 align-middle">
+              <i class="fs-4 bi-table"></i>
+              <span class="ms-1 d-none d-sm-inline">Orders</span></a
+            >
+          </li>
+          <li>
+            <a
+              href="#submenu2"
+              data-bs-toggle="collapse"
+              class="nav-link px-0 align-middle"
+            >
+              <i class="fs-4 bi-bootstrap"></i>
+              <span class="ms-1 d-none d-sm-inline">Bootstrap</span></a
+            >
+            <ul
+              class="collapse nav flex-column ms-1"
+              id="submenu2"
+              data-bs-parent="#menu"
+            >
+              <li class="w-100">
+                <a href="#" class="nav-link px-0">
+                  <span class="d-none d-sm-inline">Item</span> 1</a
+                >
+              </li>
+              <li>
+                <a href="#" class="nav-link px-0">
+                  <span class="d-none d-sm-inline">Item</span> 2</a
+                >
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a
+              href="#submenu3"
+              data-bs-toggle="collapse"
+              class="nav-link px-0 align-middle"
+            >
+              <i class="fs-4 bi-grid"></i>
+              <span class="ms-1 d-none d-sm-inline">Products</span>
+            </a>
+            <ul
+              class="collapse nav flex-column ms-1"
+              id="submenu3"
+              data-bs-parent="#menu"
+            >
+              <li class="w-100">
+                <a href="#" class="nav-link px-0">
+                  <span class="d-none d-sm-inline">Product</span> 1</a
+                >
+              </li>
+              <li>
+                <a href="#" class="nav-link px-0">
+                  <span class="d-none d-sm-inline">Product</span> 2</a
+                >
+              </li>
+              <li>
+                <a href="#" class="nav-link px-0">
+                  <span class="d-none d-sm-inline">Product</span> 3</a
+                >
+              </li>
+              <li>
+                <a href="#" class="nav-link px-0">
+                  <span class="d-none d-sm-inline">Product</span> 4</a
+                >
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href="#" class="nav-link px-0 align-middle">
+              <i class="fs-4 bi-people"></i>
+              <span class="ms-1 d-none d-sm-inline">Customers</span>
+            </a>
+          </li>
+        </ul>
+        <hr />
+        <div class="dropdown pb-4">
+          <a
+            href="#"
+            class="
+              d-flex
+              align-items-center
+              text-white text-decoration-none
+              dropdown-toggle
+            "
+            id="dropdownUser1"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            <img
+              src="https://github.com/mdo.png"
+              alt="hugenerd"
+              width="30"
+              height="30"
+              class="rounded-circle"
+            />
+            <span class="d-none d-sm-inline mx-1">loser</span>
+          </a>
+          <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
+            <li><a class="dropdown-item" href="#">New project...</a></li>
+            <li><a class="dropdown-item" href="#">Settings</a></li>
+            <li><a class="dropdown-item" href="#">Profile</a></li>
             <li>
-              <a href="#" class="link-dark text-white rounded">Overview</a>
+              <hr class="dropdown-divider" />
             </li>
-            <li><a href="#" class="link-dark text-white rounded">Weekly</a></li>
-            <li>
-              <a href="#" class="link-dark text-white rounded">Monthly</a>
-            </li>
-            <li>
-              <a href="#" class="link-dark text-white rounded">Annually</a>
-            </li>
+            <li><a class="dropdown-item" href="#">Sign out</a></li>
           </ul>
         </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"
-          >Disabled</a
-        >
-      </li>
-    </ul>
+      </div>
+    </div>
   </div>
-</nav>
+</div>
