--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Registration</title>
   </head>
+
   <body>
-    <form action="/security/login.html" method="POST">
-      <input
-        type="hidden"
-        th:name="${_csrf.paramterName}"
-        th:value="${_csrf.token}"
-      />
+    <h1>회원 가입</h1>
+    <hr />
+    <form th:action="@{/}" method="post">
       <input type="text" name="email" placeholder="이메일 입력해주세요" />
       <input type="password" name="password" placeholder="비밀번호" />
-      <button type="submit">로그인</button>
+      <button type="submit">가입하기</button>
     </form>
   </body>
 </html>
