--- a/src/main/resources/templates/common/footer.html
+++ b/src/main/resources/templates/common/footer.html
@@ -1,37 +1,20 @@
-<footer th:fragment="common-footer">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto">
-        <ul class="list-inline text-center">
-          <li class="list-inline-item">
-            <a href="#">
-              <span class="fa-stack fa-lg">
-                <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="#">
-              <span class="fa-stack fa-lg">
-                <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="#">
-              <span class="fa-stack fa-lg">
-                <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </li>
-        </ul>
-        <p class="copyright text-muted">
-          Copyright &copy; OnBoard by swrookie 2021
-        </p>
-      </div>
-    </div>
-  </div>
-</footer>
+<div class="container-fluid py-3 my-4 bg-light">
+  <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+    <li class="nav-item">
+      <a href="#" class="nav-link px-2 text-muted">Home</a>
+    </li>
+    <li class="nav-item">
+      <a href="#" class="nav-link px-2 text-muted">Features</a>
+    </li>
+    <li class="nav-item">
+      <a href="#" class="nav-link px-2 text-muted">Pricing</a>
+    </li>
+    <li class="nav-item">
+      <a href="#" class="nav-link px-2 text-muted">FAQs</a>
+    </li>
+    <li class="nav-item">
+      <a href="#" class="nav-link px-2 text-muted">About</a>
+    </li>
+  </ul>
+  <p class="text-center text-muted">© 2021 OnBoard, Inc</p>
+</div>
