--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -1,57 +1,40 @@
-<div class="navbar navbar-expand-lg navbar-dark bg-dark">
+<div class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a href="/" class="navbar-brand">
-      <strong>OnBoard</strong>
-    </a>
+    <a class="navbar-brand" th:href="@{/}"><strong>OnBoard</strong></a>
     <button
       class="navbar-toggler"
       type="button"
       data-bs-toggle="collapse"
-      data-bs-target="#navbarNav"
-      aria-controls="navbarNav"
+      data-bs-target="#navbarText"
+      aria-controls="navbarText"
       aria-expanded="false"
       aria-label="Toggle navigation"
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse">
-      <ul class="navbar-nav ml-auto">
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul
+        style="display: flex; justify-content: space-between"
+        class="navbar-nav me-auto mb-2 mb-lg-0 d-flex"
+      >
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">About</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
       </ul>
-    </div>
-    <div class="collapse navbar-collapse">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a
-            sec:authorize="isAnonymous()"
-            th:href="@{/user/login}"
-            class="nav-link"
-            aria-current="page"
-            >로그인</a
-          >
-          <a
-            sec:authorize="isAuthenticated()"
-            th:href="@{/user/logout}"
-            class="nav-link"
-            aria-current="page"
-            >로그아웃</a
-          >
-        </li>
-        <li class="nav-item">
-          <a
-            sec:authorize="isAnonymous()"
-            th:href="@{/user/register}"
-            class="nav-link"
-            aria-current="page"
-            >회원가입</a
-          >
-        </li>
-      </ul>
+      <a
+        sec:authorize="isAnonymous()"
+        th:href="@{/user/login}"
+        class="user"
+        aria-current="page"
+        >Login</a
+      >
+      <a
+        sec:authorize="isAuthenticated()"
+        th:href="@{/user/logout}"
+        class="nav-link active"
+        aria-current="page"
+        >Logout</a
+      >
     </div>
   </div>
 </div>
