--- a/src/main/resources/templates/common/sidebar.html
+++ b/src/main/resources/templates/common/sidebar.html
@@ -1,161 +1,58 @@
-<div class="container-fluid bg-light">
-  <div class="row flex-nowrap">
-    <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0">
-      <div
-        class="
-          d-flex
-          flex-column
-          align-items-center align-items-sm-start
-          px-3
-          pt-2
-          text-white
-          min-vh-100
-        "
-      >
-        <ul
-          class="
-            nav nav-pills
-            flex-column
-            mb-sm-auto mb-0
-            align-items-center align-items-sm-start
-          "
-          id="menu"
+<div class="d-flex flex-column flex-shrink-0 p-3 bg-light sidebar" id="sidebar">
+  <div class="container-fluid">
+    <a
+      href="/"
+      class="
+        d-flex
+        align-items-center
+        pb-3
+        mb-3
+        link-dark
+        text-decoration-none
+        border-bottom
+      "
+    >
+      <i class="bi bi-bookmark"></i>
+      <span class="fs-5 fw-semibold">Categories</span>
+    </a>
+    <ul class="list-unstyled ps-0">
+      <li class="mb-1">
+        <button
+          class="btn btn-toggle align-items-center rounded collapsed ::before"
+          data-bs-toggle="collapse"
+          data-bs-target="#home-collapse"
+          aria-expanded="false"
         >
-          <li>
-            <a
-              href="#submenu1"
-              data-bs-toggle="collapse"
-              class="nav-link px-0 align-middle"
-            >
-              <i class="fs-4 bi-speedometer2"></i>
-              <span class="ms-1 d-none d-sm-inline">Dashboard</span>
-            </a>
-            <ul
-              class="collapse show nav flex-column ms-1"
-              id="submenu1"
-              data-bs-parent="#menu"
-            >
-              <li class="w-100">
-                <a href="#" class="nav-link px-0">
-                  <span class="d-none d-sm-inline">Item</span> 1
-                </a>
-              </li>
-              <li>
-                <a href="#" class="nav-link px-0">
-                  <span class="d-none d-sm-inline">Item</span> 2
-                </a>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <a href="#" class="nav-link px-0 align-middle">
-              <i class="fs-4 bi-table"></i>
-              <span class="ms-1 d-none d-sm-inline">Orders</span></a
-            >
-          </li>
-          <li>
-            <a
-              href="#submenu2"
-              data-bs-toggle="collapse"
-              class="nav-link px-0 align-middle"
-            >
-              <i class="fs-4 bi-bootstrap"></i>
-              <span class="ms-1 d-none d-sm-inline">Bootstrap</span></a
-            >
-            <ul
-              class="collapse nav flex-column ms-1"
-              id="submenu2"
-              data-bs-parent="#menu"
-            >
-              <li class="w-100">
-                <a href="#" class="nav-link px-0">
-                  <span class="d-none d-sm-inline">Item</span> 1</a
-                >
-              </li>
-              <li>
-                <a href="#" class="nav-link px-0">
-                  <span class="d-none d-sm-inline">Item</span> 2</a
-                >
-              </li>
-            </ul>
-          </li>
-          <li>
-            <a
-              href="#submenu3"
-              data-bs-toggle="collapse"
-              class="nav-link px-0 align-middle"
-            >
-              <i class="fs-4 bi-grid"></i>
-              <span class="ms-1 d-none d-sm-inline">Products</span>
-            </a>
-            <ul
-              class="collapse nav flex-column ms-1"
-              id="submenu3"
-              data-bs-parent="#menu"
-            >
-              <li class="w-100">
-                <a href="#" class="nav-link px-0">
-                  <span class="d-none d-sm-inline">Product</span> 1</a
-                >
-              </li>
-              <li>
-                <a href="#" class="nav-link px-0">
-                  <span class="d-none d-sm-inline">Product</span> 2</a
-                >
-              </li>
-              <li>
-                <a href="#" class="nav-link px-0">
-                  <span class="d-none d-sm-inline">Product</span> 3</a
-                >
-              </li>
-              <li>
-                <a href="#" class="nav-link px-0">
-                  <span class="d-none d-sm-inline">Product</span> 4</a
-                >
-              </li>
-            </ul>
-          </li>
-          <li>
-            <a href="#" class="nav-link px-0 align-middle">
-              <i class="fs-4 bi-people"></i>
-              <span class="ms-1 d-none d-sm-inline">Customers</span>
-            </a>
-          </li>
-        </ul>
-        <hr />
-        <div class="dropdown pb-4">
-          <a
-            href="#"
-            class="
-              d-flex
-              align-items-center
-              text-white text-decoration-none
-              dropdown-toggle
-            "
-            id="dropdownUser1"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            <img
-              src="https://github.com/mdo.png"
-              alt="hugenerd"
-              width="30"
-              height="30"
-              class="rounded-circle"
-            />
-            <span class="d-none d-sm-inline mx-1">loser</span>
-          </a>
-          <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
-            <li><a class="dropdown-item" href="#">New project...</a></li>
-            <li><a class="dropdown-item" href="#">Settings</a></li>
-            <li><a class="dropdown-item" href="#">Profile</a></li>
-            <li>
-              <hr class="dropdown-divider" />
-            </li>
-            <li><a class="dropdown-item" href="#">Sign out</a></li>
+          <i class="bi bi-controller"></i>
+          Game
+        </button>
+        <div class="collapse" id="home-collapse">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+            <li><a href="#" class="link-dark rounded">Overview</a></li>
+            <li><a href="#" class="link-dark rounded">Updates</a></li>
+            <li><a href="#" class="link-dark rounded">Reports</a></li>
           </ul>
         </div>
-      </div>
-    </div>
+      </li>
+      <li class="border-top my-3"></li>
+      <li class="mb-1">
+        <button
+          class="btn btn-toggle align-items-center rounded collapsed"
+          data-bs-toggle="collapse"
+          data-bs-target="#account-collapse"
+          aria-expanded="false"
+        >
+          Account
+        </button>
+        <div class="collapse" id="account-collapse">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+            <li><a href="#" class="link-dark rounded">New...</a></li>
+            <li><a href="#" class="link-dark rounded">Profile</a></li>
+            <li><a href="#" class="link-dark rounded">Settings</a></li>
+            <li><a href="#" class="link-dark rounded">Sign out</a></li>
+          </ul>
+        </div>
+      </li>
+    </ul>
   </div>
 </div>
